<resources>
    <string name="app_name">GeoReminder</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="server_URI">http://localhost:8080/ephemere</string>
    <string name="task">Task</string>
    <string name="event">Event</string>
    <string name="sign_in_new_account">Please sign in to your account</string>
    <string name="sign_in_no_username">Please type in your username</string>
    <string name="sign_in_no_password">Please type in your password</string>
    <string name="sign_in_failed_both">The username or password isn\u8217t valid.</string>
    <string name="sign_in_failed_password">Please put a valid password</string>
    <string name="authenticating">Authenticating\u2026 </string>
    <string name="reg_mess">Create new account</string>
    <string name="firstnametext">First name</string>
    <string name="lastnametext">Last name</string>
    <string name="emailtext">E-mail</string>
    <string name="newusertext">Username</string>
    <string name="newpwd1text">Password</string>
    <string name="newpwd2text">Retype Passoword</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_message">Insert fields above and press Submit</string>
    <string name="pwd_no_match">Password fields doesn\'t match!</string>
    <string name="pwd_invalid">The password fields seems to be invalid. Password cannot contain space.</string>
    <string name="username_invalid">The username field seems to be invalid. Username cannot contain space.</string>
    <string name="email_invalid">The email field seems to be invalid.</string>
    <string name="no_fields">All fields required!</string>
    <string name="user_exist">Username already exist, please try with another username.</string>
    <string name="email_exist">Email address already exist, please check your registration.</string>
    <string name="registration_ok">Registration successful.</string>
    <string name="trial_login">Trial Login successful. Please check your email to verify your account.</string>
    <string name="no_trial_login">Your trial logins are finished. Please check your email and confirm your account.</string>
    <string name="checking_ver">Checking Client/Server version compatibility...</string>
    <string name="change_server_ver_not_compatible">Please change server first, the client/server version aren\'t compatible.</string>
    <string name="client_server_version_ok">Client/Server version are compatible.</string>
    <string name="server_not_compatible">Server version not compatible with client version. Please select a different server or upgrade the server.</string>
    <string name="client_not_compatible">Client version non compatible with server version. Please select a different server or upgrade your client.</string>
    <string name="retrieving_event">Downloading activities \u2026</string>
    <string name="task_list_header">Gotta do these dude !</string>
    <string name="event_list_header">Today, your appointments are</string>
    <string name="no_event_today">You don\u0027t have any appointment today</string>
    <string name="no_task_today">Relax, there\u0027s no tasks</string>
    <string name="input_prompt">Type your command or click microphone button to speak</string>
    <string name="voice_recognition_prompt">This activity demonstrates the voice recognition APIs.</string>
    <string name="speak_button">Speak!</string>
    <string name="send">send</string>
    <string name="activity_title">Title</string>
    <string name="when">When</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="start_date">start date</string>
    <string name="start_time">start time</string>
    <string name="end_date">end date</string>
    <string name="end_time">end time</string>
    <string name="GPS">GPS</string>
    <string name="from">from</string>
    <string name="until">until</string>
    <string name="priority">Priority</string>
    <string name="deadline">Deadline</string>
    <string name="notification">Allow Notification</string>
    <string name="snooze">Snooze Time</string>
    <string name="have_appointment">Appointment due! </string>
    <string name="task_notification_started">Task Notification Service is started</string>
    <string name="task_notification_stopped">Task Notification Service is stopped</string>
    <string name="between">between</string>
    <string name="and">and</string>
    <string name="bad_task_name">Sorry, cannot handle an empty-title task, please change it.</string>
    <string name="bad_event_name">Sorry, cannot handle an empty-title event, please change it.</string>
    <string name="date_wrong">The event is finished before it\u0027s even started</string>
    <string name="notification_time_wrong">Notification is finished before it\u0027s even started</string>
    <string name="description">Description (optional)</string>
    <string name="groupId">Group Id</string>
    <string name="change">change</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="ask_for_deletion_event">Are you sure you want to remove this event ?</string>
    <string name="ask_for_deletion_task">Are you sure you want to remove this task ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_snooze">Cancel Snooze</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="saving">Saving content in server \u2026</string>
    <string name="capable">You can do it</string>
    <string name="want_to">Wanna</string>
    <string name="around_location">around here!</string>
    <string name="now">now</string>
    <string name="click_hint">click here to see the list of hints</string>
    <string name="click_details">click here to see the details</string>
    <string name="creating">Creating new content in server \u2026</string>
    <string name="saving_error">Oops, problem found while saving to server. You might want to try again later or check your connection.</string>
    <string name="create_success">New content successfully created on server \u003A\u0029</string>
    <string name="edit_success">Content successfully modified on server \u003A\u0029</string>
    <string name="deleting">Deleting content in server \u2026</string>
    <string name="deletion_error">Oops, problem found while deleting from server. You might want to try again later or check your connection.</string>
    <string name="deletion_success">Content successfully deleted from server</string>
    <string name="error_connect_task">Oops, can\u0027t retrieve your tasks from server.</string>
    <string name="error_connect_event">Oops, can\u0027t retrieve your events from server.</string>
    <string name="parsing_success">Yay! the system successfully understand and execute your command</string>
    <string name="parsing_error">Humm .. so sorry, we couldn\u0027t understand or execute your command</string>
    <string name="user_preferences">User Preferences</string>
    <string name="q_period">Query Period</string>
    <string name="interval">Interval to ask for hints</string>
    <string name="max_distance">Maximum distance</string>
    <string name="max_distance_desc">Allow notification if location distance from me is below the value</string>
    <string name="parser_lang">Parser Language</string>
    <string name="parser_lang_desc">Select language for parser (Set delimiters and verbs)</string>
    <string name="tryConnectionSuccess">The server has been changed</string>
    <string name="tryConnectionFail">Cannot contact the specified server</string>
    <string name="server_list_title">Select a server from the list</string>
    <string name="changeServerSummary">Select a default server from the list</string>
    <string name="currentServer">Server</string>
    <string name="btn_create_group">Create group</string>
    <string name="btn_inviteToGroup">Invite user to join the group</string>
    <string name="btn_viewGroupRequest">View join group request</string>
    <string name="group_name">Group name</string>
    <string name="user_to_invite">User</string>
    <string name="invite_to_group_title">Invite to group</string>
    <string name="creating_group">Creating group on server...</string>
    <string name="btn_updateGroupList">Update group list</string>
    <string name="noGroupForUser">No group for the user</string>
    <string name="thereAreGroupForUser">Group list updated</string>
    <string name="group_creation_ok">Group successfully created</string>
    <string name="group_creation_ko">Error during group creation, try later</string>
    <string name="chooseAGroup">Choose a group from the list</string>
    <string name="group_invite_ok">Invite correctly sent</string>
    <string name="group_invite_ko">Invite not sent, retry later</string>
    <string name="getting_user_group_list">Getting user groups..</string>
    <string name="creating_invite_to_join_the_group">Sending invite</string>
    <string name="message_for_user_to_invite">Message</string>
    <string name="chooseAGroupRequest">Choose a group request to answer</string>
    <string name="noGroupInviteForUser">No group invite for user, try later or use the menu to create group and invite users to join it</string>
    <string name="noAssertions">No Assertions!</string>
    <string name="updateJoinToGroupRequest">Update</string>
    <string name="getting_join_to_user_group_request">Updating group requests</string>
    <string name="btn_groupInviteAccept">Join now!</string>
    <string name="btn_groupInviteRefuse">Refuse invite</string>
    <string name="join_to_group_accept_ok">Invite accepted</string>
    <string name="join_to_group_accept_ko">Error during invite accept, retry later</string>
    <string name="join_to_group_refuse_ok">Invite refused</string>
    <string name="join_to_group_refuse_ko">Error during invite refusing, retry later</string>
    <string name="server_preferences">Server Preferences</string>
    <string name="advanced_preferences">Advanced preferences</string>
    <string name="server_status">Server status</string>
    <string name="location_service_status">Location service status</string>
    <string name="current_position_status">Last known user position</string>
    <string name="notification_preferences">Notification</string>
    <string name="location">Location</string>
    <string name="object_title">Object</string>
    <string name="goon">Go on!</string>
    <string name="info_assertions_1">- With the next section you can help the program to understand tasks and actions!</string>
    <string name="info_assertions_2">- In the first tab you can define where you find an object.</string>
    <string name="info_assertions_3">- In the second tab you can define where you can do something.</string>
    <string name="info">Info</string>
    <string name="vibration_preferences">Vibrate</string>
    <string name="set_vibration_summary_default">Select a vibration mode, default is off</string>
    <string name="change_server_summary">Change server</string>
</resources>