<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">
    <ImageView android:id="@+id/MainLogo" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:layout_centerHorizontal="true"
		android:layout_marginTop="5dip"
        android:paddingBottom="25dip"
    	android:src="@drawable/icon"/>

	<TextView    
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MainLogo"
        android:layout_centerHorizontal="true"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingBottom="25dip"
        android:text="@string/username"/>

    <Spinner 
        android:id="@+id/SpinnerServerList"
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:layout_marginLeft="15dip"
        android:layout_below="@id/message"
        android:prompt = "@string/currentServer">
    </Spinner>

    <TextView    
        android:id="@+id/usernametext"
        android:layout_width="80dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SpinnerServerList"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="15dip"
        android:text="@string/username"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_toRightOf="@id/usernametext"
        android:layout_alignBaseline="@id/usernametext"
        android:singleLine="true"
        android:maxLines="1"
        android:background="@android:drawable/editbox_background"/>        

    <TextView    
        android:id="@+id/passwordtext"
        android:layout_width="80dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:text="@string/password"
        android:layout_below="@id/usernametext"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:maxLines="1"
        android:singleLine="true"
        android:password="true"
        android:background="@android:drawable/editbox_background"
        android:layout_toRightOf="@id/passwordtext"
        android:layout_alignBaseline="@id/passwordtext"/>       
    <Button
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passwordtext"
        android:layout_marginTop="15dip"
        android:text="@string/sign_in_button" 
        android:onClick="signIn" 
        android:layout_alignParentLeft="true"/>
        
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passwordtext"
        android:layout_marginTop="15dip"
        android:text="@string/register_button"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
    
