<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">
    <TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:padding="10dip">
    	 <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:id="@+id/object_title"
            android:text="@string/object_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingBottom="3dip" />
	    <EditText
        	android:id="@+id/object_edit"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:maxLines="1"
        	android:singleLine="true"
        	android:background="@android:drawable/edit_text"/>
    </LinearLayout>
    
    <View
        android:layout_height="1dip"
        android:background="#FF333333" />
    
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:padding="10dip">
    	 <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:id="@+id/location_title"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingBottom="3dip" />
    	    	
     	 <EditText
        	android:id="@+id/location_edit"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:maxLines="1"
        	android:singleLine="true"
        	android:background="@android:drawable/edit_text"/>
  </LinearLayout>
    
    <View
        android:layout_height="1dip"
        android:background="#FF333333" />
       
       <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:paddingLeft="10dip"
    	android:paddingRight="10dip">
    	<TextView    
        	android:id="@+id/description_text"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/description"/>
       	<EditText
        	android:id="@+id/description_edit"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
        
  
     
    
    </TableLayout>
</ScrollView>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:orientation="horizontal"
		android:background="#FFCCCCCC">
		<Button 
			android:id="@+id/save_button"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:layout_weight="1"
			android:text="@string/save" 
			android:layout_margin="3dip"/>
		<Button 
			android:id="@+id/back_button"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:layout_weight="1"
			android:text="@string/back" 
			android:layout_margin="3dip"/>
	</LinearLayout>

</TableLayout>
