<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<!--SERVER STATUS  -->
	<TextView 
		android:id="@+id/server_status" 
		android:layout_height="wrap_content" 
		android:text="@string/server_status" 
		android:textStyle="normal|bold" 
		android:gravity="center_vertical|center_horizontal" 
		android:layout_width="fill_parent">
	</TextView>
	<TextView 
		android:id="@+id/server_name_value" 
		android:layout_height="wrap_content" 
		android:textStyle="normal|bold" 
		android:gravity="center_vertical|center_horizontal" 
		android:layout_width="fill_parent">
	</TextView>
	<TextView 
		android:id="@+id/server_connection_status_value" 
		android:layout_height="wrap_content" 
		android:textStyle="normal|bold" 
		android:gravity="center_vertical|center_horizontal" 
		android:layout_width="fill_parent">
	</TextView>
	<!--LOCATION PROVIDER STATUS  -->
	<TextView 
		android:id="@+id/location_provider_status" 
		android:layout_height="wrap_content" 
		android:text="@string/location_service_status" 
		android:textStyle="normal|bold" 
		android:gravity="center_vertical|center_horizontal" 
		android:layout_width="fill_parent">
	</TextView>
	<TextView 
		android:id="@+id/location_provider_status_value" 
		android:layout_height="wrap_content" 
		android:textStyle="normal|bold" 
		android:gravity="center_vertical|center_horizontal" 
		android:layout_width="fill_parent">
	</TextView>
	<!--CURRENT POSITION STATUS  -->
		<TextView 
		android:id="@+id/current_position_status" 
		android:layout_height="wrap_content" 
		android:text="@string/current_position_status" 
		android:textStyle="normal|bold" 
		android:gravity="center_vertical|center_horizontal" 
		android:layout_width="fill_parent">
	</TextView>
	<TextView 
		android:id="@+id/current_position_status_latitude" 
		android:layout_height="wrap_content" 
		android:textStyle="normal|bold" 
		android:gravity="center_vertical|center_horizontal" 
		android:layout_width="fill_parent">
	</TextView>
	<TextView 
		android:id="@+id/current_position_status_longitude" 
		android:layout_height="wrap_content" 
		android:textStyle="normal|bold" 
		android:gravity="center_vertical|center_horizontal" 
		android:layout_width="fill_parent">
	</TextView>
</LinearLayout>